--- a/index.html
+++ b/index.html
@@ -60,12 +60,33 @@
             </div>
         </section>
 
+
+
+        <!-- show details modal  -->
+        <!-- Open the modal using ID.showModal() method -->
+        <dialog id="show_details_modal" class="modal modal-bottom sm:modal-middle">
+            <div class="modal-box">
+                <h3 id="show-detail-phone-name" class="font-bold text-lg"></h3>
+
+                <div id="show-detail-container" class="space-y-3">
+
+                </div>
+
+                <div class="modal-action">
+                    <form method="dialog">
+                        <!-- if there is a button in form, it will close the modal -->
+                        <button class="btn">Exit</button>
+                    </form>
+                </div>
+            </div>
+        </dialog>
+
+
+
+
+
     </main>
     <footer></footer>
-
-
-
-
 
 
 
